# generative-ai-learning

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
data/: fleet_chunks.json  fleet_operations_manual.txt  fleet_vector_index.json  lesson_49_integration_interface_audit.txt  processed_fleet_sections.json
lessons/: lesson_01_python_basics.py  lesson_02_ollama_api.py  lesson_03_prompt_quality.py  lesson_04_automatic_evaluation.py  lesson_05_robust_evaluation.py  lesson_06_structured_output.py  lesson_07_pydantic_basics.py  lesson_08_pydantic_ollama.py  lesson_09_fastapi_basics.py  lesson_10_fastapi_ollama_chat.py  lesson_11_api_client_testing.py  lesson_13_embeddings_similarity.py  lesson_14_tokens_and_token_counts.py  lesson_15_attention_fundamentals.py  lesson_16_causal_self_attention.py  lesson_17_transformer_block.py  lesson_18_logits_temperature_sampling.py  lesson_19_context_window.py  lesson_19b_context_position.py  lesson_19c_context_diagnostics.py  lesson_20_document_ingestion.py  lesson_21_document_chunking.py  lesson_22_build_vector_index.py  lesson_23_search_vector_index.py  lesson_24_grounded_rag.py  lesson_25_citation_evaluation.py  lesson_25b_deterministic_citation_repair.py  lesson_26_retrieval_evaluation.py  lesson_27_retrieval_robustness.py  lesson_28_guarded_rag.py  lesson_30_qdrant_local_index.py  lesson_31_qdrant_persistent_filtering.py  lesson_32_qdrant_guarded_rag.py  lesson_35_qdrant_retriever_component.py  lesson_36_guarded_rag_service.py  lesson_40_fastapi_guarded_rag_api.py  (+7 more)
(+16 files in other folders)
